--- a/index.html
+++ b/index.html
@@ -2,8 +2,105 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web VLC Player</title>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f4f4f4;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            min-height: 100vh;
+        }
+        h1 {
+            font-size: 2rem;
+            margin-bottom: 1rem;
+            text-align: center;
+        }
+        #streamUrl {
+            width: 100%;
+            max-width: 600px;
+            padding: 10px;
+            margin-bottom: 10px;
+            font-size: 1rem;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 1rem;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-bottom: 10px;
+            width: 100%;
+            max-width: 200px;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        #m3uFile {
+            margin-bottom: 10px;
+            width: 100%;
+            max-width: 600px;
+        }
+        #channelList {
+            list-style: none;
+            padding: 0;
+            width: 100%;
+            max-width: 600px;
+            margin-bottom: 20px;
+        }
+        #channelList li {
+            background-color: white;
+            padding: 15px;
+            margin-bottom: 5px;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 1rem;
+            transition: background-color 0.2s;
+        }
+        #channelList li:hover {
+            background-color: #e0e0e0;
+        }
+        #videoPlayer {
+            width: 100%;
+            max-width: 640px;
+            height: auto;
+            background-color: black;
+            border-radius: 4px;
+        }
+        @media (max-width: 600px) {
+            body {
+                padding: 10px;
+            }
+            h1 {
+                font-size: 1.5rem;
+            }
+            #streamUrl, #m3uFile {
+                font-size: 0.9rem;
+                padding: 8px;
+            }
+            button {
+                font-size: 0.9rem;
+                padding: 8px 16px;
+            }
+            #channelList li {
+                font-size: 0.9rem;
+                padding: 12px;
+            }
+            #videoPlayer {
+                max-width: 100%;
+            }
+        }
+    </style>
 </head>
 <body>
     <h1>Web VLC Player</h1>
@@ -11,7 +108,7 @@
     <button onclick="playStream()">再生</button>
     <input type="file" id="m3uFile" accept=".m3u,.m3u8">
     <ul id="channelList"></ul>
-    <video id="videoPlayer" controls width="640"></video>
+    <video id="videoPlayer" controls></video>
 
     <script>
         const video = document.getElementById('videoPlayer');
